fix: Fixed style in controls in top bar
The curves in the top bar were covering part of the controls
in their sides. That reduced the space to effectively click
the controls. z-index value was set on the controls.

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -40,10 +40,12 @@
 
 .top-item:first-child > img {
   right: -$curve-width/2+px;
+  z-index: $zindex-dropdown;
 }
 
 .top-item:last-child > img {
   right: $curve-width/2+px;
+  z-index: $zindex-dropdown;
 }
 
 .top-item:nth-child(n+3):nth-child(-n+5) {
